--- a/manifest/setup-opensearch.yaml
+++ b/manifest/setup-opensearch.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: AWS CloudFormation for OpenSearch in us-west-2
+Description: AWS CloudFormation for OpenSearch
 
 Resources:
   OpenSearchDomain:
@@ -38,7 +38,6 @@ Resources:
             Resource: "*"
 
 Outputs:
-
   DomainEndpoint:
     Description: "Endpoint for the OpenSearch domain."
     Value: !Sub "https://${OpenSearchDomain.DomainEndpoint}"
